--- a/yuuvis/values.yaml
+++ b/yuuvis/values.yaml
@@ -1,32 +1,32 @@
 imageCredentials:
   yuuvisorg:
     registry: docker.yuuvis.org
-    username:
-    password:
+    username: osvh
+    password: j21xrx7xzGxYqvR
 
 yuuvis:
   keycloak:
     # !!! Change before running
     # this variable must contain the "public" ip of keycloak
     # this ip will be sent to the user from the authentication service
-    ip: 192.168.99.100
+    ip: 10.211.55.4
   git:
     protocol: http
     url: gogs.infrastructure/yuuvis/yuuvis-config.git
     name: yuuvis-config
-    user: yuuvis
-    password: changeme
+    user: osvh
+    password: j21xrx7xzGxYqvR
     branch: master
   amqp:
     user: rodger
-    password: changeme
+    password: optimalsystem
     url: rabbitmq.infrastructure
     port: 5672
   db:
     name: yuuvis
     server: postgresql.infrastructure:5432
     user: yuuvis
-    password: changeme
+    password: optimalsystem
   elastic:
     url: elasticsearch.infrastructure
     init:
@@ -120,7 +120,7 @@ yuuvis:
         s3:
           s3profile1:
             access-key: 'MGMWCOYTDUSLNCFE'
-            secret-key: 'changeme'
+            secret-key: 'optimalsystem'
             url: 'http://minio.infrastructure:9000'
             bucket: 'dmscloudrepodocker'
         netapp:
@@ -156,7 +156,7 @@ yuuvis:
     # Konfiguration für den yuuvis organization service
     keycloak.server: https://keycloak-https.infrastructure/auth
     keycloak.admin.username: keycloak
-    keycloak.admin.password: changeme
+    keycloak.admin.password: optimalsystem
   systemschema: |
     <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
     <schema xmlns="http://optimal-systems.org/ns/dmscloud/schema/v5.0/">
