--- a/playbooks/persistentvolumes/pv-gg.yml
+++ b/playbooks/persistentvolumes/pv-gg.yml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-pg
+  name: pv-gg
+  labels:
+    app: pvcs
 spec:
   capacity:
     storage: 500Mi
@@ -9,10 +11,9 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Recycle
-  storageClassName: standard
   mountOptions:
     - hard
     - nfsvers=4.1
   nfs:
-    path: /tmp/optimal/pg
+    path: /tmp/optimal/gg
     server: 10.211.55.4
