--- a/playbooks/persistentvolumes/pv-mi.yml
+++ b/playbooks/persistentvolumes/pv-mi.yml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-mq
+  name: pv-mi
+  labels:
+    app: pvcs
 spec:
   capacity:
-    storage: 100Mi
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
@@ -14,5 +16,5 @@ spec:
     - hard
     - nfsvers=4.1
   nfs:
-    path: /tmp/optimal/mq
+    path: /tmp/optimal/mi
     server: 10.211.55.4
