--- a/playbooks/persistentvolumes/pv-pg.yml
+++ b/playbooks/persistentvolumes/pv-pg.yml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-es
+  name: pv-pg
+  labels:
+    app: pvcs
 spec:
   capacity:
-    storage: 5Gi
+    storage: 500Mi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
@@ -14,5 +16,5 @@ spec:
     - hard
     - nfsvers=4.1
   nfs:
-    path: /tmp/optimal/es
+    path: /tmp/optimal/pg
     server: 10.211.55.4
