--- a/playbooks/persistentvolumes/pvs-macpro.yml
+++ b/playbooks/persistentvolumes/pvs-macpro.yml
@@ -1,20 +1,20 @@
 - name: install pv-es
-  shell: kubectl apply -f ./playbooks/persistentvolumes/pv-es.yml
+  shell: kubectl apply -f {{ pvsdir }}/pv-es.yml
   args:
     chdir: "{{ installdir }}"
 - name: install pv-gg
-  shell: kubectl apply -f ./playbooks/persistentvolumes/pv-gg.yml
+  shell: kubectl apply -f {{ pvsdir }}/pv-gg.yml
   args:
     chdir: "{{ installdir }}"
 - name: install pv-mi
-  shell: kubectl apply -f ./playbooks/persistentvolumes/pv-mi.yml
+  shell: kubectl apply -f {{ pvsdir }}/pv-mi.yml
   args:
     chdir: "{{ installdir }}"
 - name: install pv-mq
-  shell: kubectl apply -f ./playbooks/persistentvolumes/pv-mq.yml
+  shell: kubectl apply -f {{ pvsdir }}/pv-mq.yml
   args:
     chdir: "{{ installdir }}"
 - name: install pv-pg
-  shell: kubectl apply -f ./playbooks/persistentvolumes/pv-pg.yml
+  shell: kubectl apply -f {{ pvsdir }}/pv-pg.yml
   args:
     chdir: "{{ installdir }}"
