--- a/playbooks/test.yaml
+++ b/playbooks/test.yaml
@@ -5,13 +5,18 @@
     - name: Loop over lines in a file
       debug:
         var: item
-      with_lines: cat "{{ mountdirs }}"
-    - name: create directories to be mounted
-      file:
-        path: '{{ item }}'
-        state: directory
-        mode: 0777
-      with_lines: cat "{{ mountdirs }}"
+      with_lines: cat "{{ persistentvolumeslist }}"
+    - name: install pvs
+      shell: kubectl apply -f '{{ item }}' --dry-run=client -o yaml
+      args:
+        chdir: "{{ installdir }}"
+      with_lines: cat "{{ persistentvolumeslist }}"
+#    - name: create directories to be mounted
+#      file:
+#        path: '{{ item }}'
+#        state: directory
+#        mode: 0777
+#      with_lines: cat "{{ mountdirs }}"
 #      loop:
 #        - { dest: /tmp/optimal/es }
 #        - { dest: /tmp/optimal/gg }
