--- a/yuuvis/values.yaml
+++ b/yuuvis/values.yaml
@@ -9,10 +9,11 @@ yuuvis:
     # !!! Change before running
     # this variable must contain the "public" ip of keycloak
     # this ip will be sent to the user from the authentication service
+
     # optimal
-    ip: 10.0.1.53
-    # macpro
-#    ip: 10.211.55.4
+#    ip: 10.0.1.53
+    # macpro the main-ip of the cluster, not the IP of the node where keycloak pod is running on
+    ip: 10.211.55.4
   git:
     protocol: http
     url: gogs.infrastructure/yuuvis/yuuvis-config.git
