--- a/playbooks/delete.yml
+++ b/playbooks/delete.yml
@@ -3,6 +3,20 @@
   vars:
     application: true
   tasks:
+  - name: Remove management and waiting suppression ending
+    community.kubernetes.helm:
+      name: management
+      release_namespace: yuuvis
+      state: absent
+      wait: true
+    when: application
+  - name: Remove rendition and waiting suppression ending
+    community.kubernetes.helm:
+      name: rendition
+      release_namespace: yuuvis
+      state: absent
+      wait: true
+    when: application
   - name: Remove bpm and waiting suppression ending
     community.kubernetes.helm:
       name: bpm
