--- a/playbooks/start.yml
+++ b/playbooks/start.yml
@@ -1,4 +1,5 @@
 - hosts: master
+- hosts: master
   tasks:
     - name: Include task nfs dependencies
       import_tasks: ./nfs/master.yaml
@@ -43,4 +44,16 @@
         name: bpm
         release_namespace: yuuvis
         chart_ref: $HOME/workspace/yuuvis/bpm
+        wait: true
+    - name: create rendition and waiting suppression ending
+      community.kubernetes.helm:
+        name: rendition
+        release_namespace: yuuvis
+        chart_ref: $HOME/workspace/yuuvis/rendition
+        wait: true
+    - name: create management and waiting suppression ending
+      community.kubernetes.helm:
+        name: management
+        release_namespace: yuuvis
+        chart_ref: $HOME/workspace/yuuvis/management
         wait: true
