--- a/playbooks/nfs/master.yaml
+++ b/playbooks/nfs/master.yaml
@@ -3,6 +3,8 @@
   file:
     path: '{{ item }}'
     state: directory
+    owner: root
+    group: root
     mode: 0777
   with_lines: cat "{{ mountdirs }}"
 
