--- a/playbooks/persistentvolumes/macpro/pv-gg.yml
+++ b/playbooks/persistentvolumes/macpro/pv-gg.yml
@@ -11,6 +11,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Recycle
+  storageClassName: standard
   mountOptions:
     - hard
     - nfsvers=4.1
