--- a/client/templates/adduserserviceconfigconfigmap.yaml
+++ b/client/templates/adduserserviceconfigconfigmap.yaml
@@ -26,7 +26,7 @@ data:
         echo 'post userservice yml failed'
         exit 1
       else
-        echo 'userservice yml already exists'
+        echo 'userservice yml created'
         exit 0
       fi
     fi
