--- a/client/values.yaml
+++ b/client/values.yaml
@@ -33,14 +33,14 @@ yuuvis:
     timeoutSeconds: 5
   client:
     apiweb:
-      dockerImage: docker.yuuvis.org/yuuvis/api-web:1.7.0
+      dockerImage: docker.yuuvis.org/yuuvis/api-web:1.8.0-rc6
       initContainerImage: docker.yuuvis.org/yuuvis/helper/init-helper:latest
       profiles: prod,docker,kubernetes
       instances: 1
       java:
         maxHeap: -Xmx512m
     userservice:
-      dockerImage: docker.yuuvis.org/yuuvis/userservice:1.2.0
+      dockerImage: docker.yuuvis.org/yuuvis/userservice:1.4.0-RC01
       initContainerImage: docker.yuuvis.org/yuuvis/helper/init-helper:latest
       profiles: postgres,userservice
       instances: 1
@@ -69,19 +69,19 @@ yuuvis:
         keycloak.admin.username: keycloak
         keycloak.admin.password: optimalsystem
     client:
-      dockerImage: docker.yuuvis.org/yuuvis/client:2.0.2
+      dockerImage: docker.yuuvis.org/yuuvis/client:2.1.0-rc11
       instances: 1
     custom:
-      dockerImage: docker.yuuvis.org/yuuvis/client:2.0.1
+      dockerImage: docker.yuuvis.org/yuuvis/client:2.1.0-rc11
       instances: 0
     viewer:
-      dockerImage: docker.yuuvis.org/yuuvis/viewerservice:1.3.0
+      dockerImage: docker.yuuvis.org/yuuvis/viewerservice:1.4.0-rc1
       instances: 1
     architect:
-      dockerImage: docker.yuuvis.org/yuuvis/architect:1.2.0
+      dockerImage: docker.yuuvis.org/yuuvis/architect:1.3.0-rc2
       instances: 1
     sothook:
-      dockerImage: docker.yuuvis.org/yuuvis/sandbox/sothook:4.7.0
+      dockerImage: docker.yuuvis.org/yuuvis/sandbox/sothook:4.7.1
       instances: 1
       profiles: prod,cloud,kubernetes
       java:
