--- a/management/values.yaml
+++ b/management/values.yaml
@@ -25,13 +25,13 @@ yuuvis:
     java:
       maxHeap: -Xmx128m
   apitm:
-    dockerImage: docker.yuuvis.org/yuuvis/tenant-management:1.4.0
+    dockerImage: docker.yuuvis.org/yuuvis/tenant-management:1.5.0-rc6
     profiles: prod,docker,kubernetes,oauth2
     instances: 1
     java:
       maxHeap: -Xmx128m
     client:
-      rooturl: https://optimalsystem
+      rooturl: https://changeme
     # if e.g. the keycloak has been deployed with a self signed cert 
     # the certs mounted at /etc/yuuvis/certs will be added to the used java truststore 
     # at the start of the container
@@ -48,28 +48,28 @@ yuuvis:
       deploy: true
       client:
         instances: 1
-        dockerImage: docker.yuuvis.org/yuuvis/management-console-client:1.2.1
+        dockerImage: docker.yuuvis.org/yuuvis/management-console-client:1.3.0-rc1
       api:
         dockerImage: docker.yuuvis.org/yuuvis/management-console:1.2.0
         instances: 1
         config:
-          host: optimalsystem
-          keycloak: optimalsystem
-          realm: optimalsystem
-          client: optimalsystem
-          clientsecret: optimalsystem
-          apiHost: optimalsystem
-          clientHost: optimalsystem
+          host: changeme
+          keycloak: changeme
+          realm: changeme
+          client: changeme
+          clientsecret: changeme
+          apiHost: changeme
+          clientHost: changeme
           jwt:
             token:
-              access: optimalsystem
-              refresh: optimalsystem
+              access: changeme
+              refresh: changeme
           db:
             host: postgresql.infrastructure
             port: "5432"
             name: consoledb
-            user: optimalsystem
-            password: optimalsystem
+            user: changeme
+            password: changeme
             createdb: true
             # for postgres systems the database an optional init job can be used to create 
             # the database
@@ -81,23 +81,23 @@ yuuvis:
             # and grand privileges to users
             privilege:
               user: postgres
-              password: optimalsystem
+              password: changeme
           smtp:
-            host: optimalsystem
+            host: changeme
             port: "25"
-            from: optimalsystem
-            user: optimalsystem
-            password: optimalsystem
+            from: changeme
+            user: changeme
+            password: changeme
           ip:
             keycloak:
-              realm: optimalsystem
-              host: optimalsystem
+              realm: changeme
+              host: changeme
               client:
-                id: optimalsystem
-                secret: optimalsystem
+                id: changeme
+                secret: changeme
               api:
-                id: optimalsystem
-                secret: optimalsystem
+                id: changeme
+                secret: changeme
      
 initContainer:
   command: "until wget -q --spider http://configservice/manage/health; do echo waiting for configservice; sleep 11; done;"
