--- a/monitoring/Chart.yaml
+++ b/monitoring/Chart.yaml
@@ -1,5 +1,9 @@
-apiVersion: v1
+apiVersion: v2
 appVersion: "1.0"
-description: Chart for monitoring templates, values.yaml is shard with prometheus chart
+description: Monitoring chart deploying the prometheus-operator and required resources
 name: monitoring
 version: 0.7.0
+dependencies:
+- name: kube-prometheus-stack
+  version: ^16.14.1
+  repository: https://prometheus-community.github.io/helm-charts
