--- a/playbooks/delete.yml
+++ b/playbooks/delete.yml
@@ -45,6 +45,12 @@
       state: absent
       wait: true
     when: application
+  - name: Remove nfs-provisioner and waiting suppression ending
+    community.kubernetes.helm:
+      name: nfs-profisioner
+      state: absent
+      wait: true
+    when: application
   - name: delete pvc of infratsructure
     shell: kubectl delete pvc -n infrastructure --all
     when: application
