--- a/infrastructure/requirements.yaml
+++ b/infrastructure/requirements.yaml
@@ -14,3 +14,6 @@ dependencies:
 - name: rabbitmq
   version: ^7.7.1
   repository: https://charts.bitnami.com/bitnami
+- name: gitea
+  version: ^4.0.1
+  repository: https://dl.gitea.io/charts/
