--- a/bpm/Chart.yaml
+++ b/bpm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "2021 autumn alpha"
+appVersion: "2021 winter"
 description: yuuvis bpm components
 name: yuuvis-bpm
 version: 0.2.0
