--- a/bpm/values.yaml
+++ b/bpm/values.yaml
@@ -16,9 +16,9 @@ yuuvis:
     timeoutSeconds: 5
   bpm:
     engine:
-      dockerImage: docker.yuuvis.org/yuuvis/bpm-engine:0.3.0-RC02
+      dockerImage: docker.yuuvis.org/yuuvis/bpm-engine:0.5.0
       initContainerImage: docker.yuuvis.org/yuuvis/helper/init-helper:latest
-      profiles: postgres,swagger
+      profiles: postgres,swagger,oauth2
       instances: 1
       java:
         maxHeap: -Xmx128m
@@ -42,7 +42,7 @@ yuuvis:
           user: postgres
           password: optimalsystem
     admin:
-      dockerImage: docker.yuuvis.org/yuuvis/bpm-admin:0.3.0-RC02
+      dockerImage: docker.yuuvis.org/yuuvis/bpm-admin:0.5.0
       profiles: 
       instances: 1
       java:
