--- a/client/values.yaml
+++ b/client/values.yaml
@@ -1,8 +1,3 @@
-imageCredentials:
-  dockeryuuvisorg:
-    registry: docker.yuuvis.org
-    username: osvh
-    password: j21xrx7xzGxYqvR
 yuuvis:
   image:
     imagePullPolicy: Always
@@ -11,7 +6,10 @@ yuuvis:
     url: http://configservice/config
   git:
     protocol: http
-    url: gogs.infrastructure/yuuvis/yuuvis-config.git
+    # please not that since infrastructure helm chart 0.9.0 gitea is used
+    # in previous versions gogs was used
+    # url: gogs.infrastructure/yuuvis/yuuvis-config.git
+    url: gitea-http.infrastructure:3000/yuuvis/yuuvis-config.git
     name: yuuvis-config
     user: yuuvis
     password: optimalsystem
@@ -33,14 +31,14 @@ yuuvis:
     timeoutSeconds: 5
   client:
     apiweb:
-      dockerImage: docker.yuuvis.org/yuuvis/api-web:1.8.0-rc6
+      dockerImage: docker.yuuvis.org/yuuvis/api-web:1.9.1
       initContainerImage: docker.yuuvis.org/yuuvis/helper/init-helper:latest
       profiles: prod,docker,kubernetes
       instances: 1
       java:
         maxHeap: -Xmx512m
     userservice:
-      dockerImage: docker.yuuvis.org/yuuvis/userservice:1.4.0-RC01
+      dockerImage: docker.yuuvis.org/yuuvis/userservice:1.5.0
       initContainerImage: docker.yuuvis.org/yuuvis/helper/init-helper:latest
       profiles: postgres,userservice
       instances: 1
@@ -69,16 +67,16 @@ yuuvis:
         keycloak.admin.username: keycloak
         keycloak.admin.password: optimalsystem
     client:
-      dockerImage: docker.yuuvis.org/yuuvis/client:2.1.0-rc11
+      dockerImage: docker.yuuvis.org/yuuvis/client:2.2.2
       instances: 1
     custom:
-      dockerImage: docker.yuuvis.org/yuuvis/client:2.1.0-rc11
+      dockerImage: docker.yuuvis.org/yuuvis/client:2.2.2
       instances: 0
     viewer:
-      dockerImage: docker.yuuvis.org/yuuvis/viewerservice:1.4.0-rc1
+      dockerImage: docker.yuuvis.org/yuuvis/viewerservice:2.0.1
       instances: 1
     architect:
-      dockerImage: docker.yuuvis.org/yuuvis/architect:1.3.0-rc2
+      dockerImage: docker.yuuvis.org/yuuvis/architect:1.4.0
       instances: 1
     sothook:
       dockerImage: docker.yuuvis.org/yuuvis/sandbox/sothook:4.7.1
