--- a/management/templates/management-console-client-svc.yaml
+++ b/management/templates/management-console-client-svc.yaml
@@ -4,14 +4,14 @@ kind: Service
 metadata:
   labels:
     app: {{.Values.yuuvis.labels.app}}
-    name: console-client
+    name: management-console-client
     yuuvis: "true"
-  name: console-client
+  name: management-console-client
 spec:
   ports:
   - name: "http"
     port: 80
     targetPort: 80
   selector:
-    name: console-client
+    name: management-console-client
 {{- end}}
