--- a/management/templates/management-console-svc.yaml
+++ b/management/templates/management-console-svc.yaml
@@ -3,14 +3,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: console
-  name: console
+    app: management-console
+  name: management-console
 spec:
   ports:
   - name: "http"
     port: 8080
     targetPort: 5000
   selector:
-    app: console
+    app: management-console
   type: ClusterIP
 {{- end}}
