--- a/management/values.yaml
+++ b/management/values.yaml
@@ -18,14 +18,14 @@ yuuvis:
     periodSeconds: 30
     timeoutSeconds: 5
     path: /manage/health
-  metricsservice:
+  metrics:
     dockerImage: docker.yuuvis.org/yuuvis/metrics:1.2.0
     profiles: postgres,dbs
     instances: 1
     java:
       maxHeap: -Xmx128m
-  apitm:
-    dockerImage: docker.yuuvis.org/yuuvis/tenant-management:1.5.0-rc6
+  tenantmanagement:
+    dockerImage: docker.yuuvis.org/yuuvis/tenant-management:1.6.0
     profiles: prod,docker,kubernetes,oauth2
     instances: 1
     java:
@@ -45,12 +45,12 @@ yuuvis:
         name: keycloak-tls-selfsigned
   management:
     console:
-      deploy: true
+      deploy: false
       client:
         instances: 1
-        dockerImage: docker.yuuvis.org/yuuvis/management-console-client:1.3.0-rc1
+        dockerImage: docker.yuuvis.org/yuuvis/management-console-client:1.4.0
       api:
-        dockerImage: docker.yuuvis.org/yuuvis/management-console:1.2.0
+        dockerImage: docker.yuuvis.org/yuuvis/management-console:1.4.0
         instances: 1
         config:
           host: changeme
