--- a/dynamic-storage-provisioner/templates/csi-raid-managed-nfs-configmap.yaml
+++ b/dynamic-storage-provisioner/templates/csi-raid-managed-nfs-configmap.yaml
@@ -7,7 +7,7 @@ data:
   csiraid.config: |
     [source]
     type = sftp
-    host = 10.0.1.51
+    host = {{.Values.csiraid.nfs.server}}
     path = /mnt/optimal/nfs-csi-provisioner
     user = root
     key_file = /.ssh/id_rsa
@@ -15,7 +15,7 @@ data:
     sha1sum_command = sha1sum
     [target]
     type = sftp
-    host = 10.0.1.51
+    host = {{.Values.csiraid.nfs.server}}
     path = /mnt/optimal/nfs-csi-provisioner-backup
     user = root
     key_file = /.ssh/id_rsa
