--- a/playbooks/updateForCsiRaidProvisioner.yml
+++ b/playbooks/updateForCsiRaidProvisioner.yml
@@ -1,10 +1,6 @@
 - hosts: localhost
-  vars:
-    helm_chart_url: "https://dl.gitea.io/charts/"
   tasks:
-    - name: Add helm repo
-      kubernetes.core.helm_repository:
-        name: gitea-charts
-        repo_url: "{{ helm_chart_url }}"
+    - name: Install dynamic storage provisioner
+      import_tasks: ./dynamicStorageProvisioner.yml
     - name: create infrastructure and waiting suppression ending
       import_tasks: ./updateTask.yml
