--- a/deploymentagent/playbooks.yaml
+++ b/deploymentagent/playbooks.yaml
@@ -6,7 +6,7 @@
   tasks:
     - name: Get all dirs
       find:
-        paths: parent_dir
+        paths: /tmp/deploymentrepository
         file_type: directory
       register: result_of_find
 
@@ -18,6 +18,5 @@
     # The output will be very verbose but for debugging purposes it can be filtered
     # ansible-playbook action_per_dir.yml | grep msg
     - name: Print all the dirs
-      debug:
-        msg: "{{ item.path }}"
+      include_tasks: "{{ item.path }}/playbook/playbook.yaml"
       with_items: "{{ result_of_find.files }}"
